@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
+<!DOCTYPE gweather SYSTEM "locations.dtd">
 <gweather format="1.0">
 <region>
   <_name>Middle East</_name>
