@@ -1,3 +1,12 @@
+2004-11-30  James Henstridge  <james@jamesh.id.au>
+
+	* Makefile.am (EXTRA_DIST): install locations.dtd.
+
+	* Locations.xml.in: add a DOCTYPE declaration to the top of the file.
+
+	* locations.dtd: update DTD so that it can validate either
+	Locations.xml.in or Locations.xml.
+
 2004-11-29  Davyd Madeley  <davyd@madeley.id.au>
 
 	* Locations.xml.in: Sync with METAR list. Tidy up entire database.
